opa/compliace/cpod.yml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-with-limits
spec:
  containers:
    - name: nginx
      image: nginx
      resources:
        limits:
          cpu: "100m"
          memory: "64Mi"
