opa/compliace/vpod.yml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-no-limits
spec:
  containers:
    - name: nginx
      image: nginx
